@@ -1,3 +1,7 @@
+2006-03-25  Bruno Haible  <bruno@clisp.org>
+
+	* lib-link.m4 (AC_LIB_LINKFLAGS_FROM_LIBS): New macro.
+
 2005-08-27  Bruno Haible  <bruno@clisp.org>
 
 	Support for lib vs. lib64 distinction on biarch platforms.
